--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "scripts": {
     "clean": "lerna exec --parallel -- rimraf lib",
+    "lab:build": "cd $CONDA_PREFIX/share/jupyter/lab/staging && jlpm build",
     "bootstrap":
-      "jlpm --no-optional && jlpm clean && jlpm lint && jlpm lerna bootstrap && jlpm build && jlpm lab:link",
+      "jlpm --no-optional --prefer-offline && jlpm clean && jlpm lint && jlpm lerna bootstrap && jlpm build && jlpm lab:link",
     "build": "jlpm build:core && jlpm build:ext && jlpm build:fonts",
     "build:ext": "lerna exec --scope '@deathbeds/jupyterlab-fonts-extension' -- tsc",
     "build:core": "lerna exec --scope '@deathbeds/jupyterlab-fonts' -- tsc",
