--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -4,12 +4,12 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
   "dependencies": {
-    "@deathbeds/jupyterlab-fonts": "^0.1.0",
+    "@deathbeds/jupyterlab-fonts": "^0.1.1",
     "firacode": "^1.205.0",
     "@jupyterlab/application": "^0.16.0"
   },
   "description": "Code Fonts for JupyterLab",
-  "files": ["{lib,style}/*.{d.ts,js,css}"],
+  "files": ["{lib,style}/*.{d.ts,js,css}", "{README.md,LICENSE}"],
   "jupyterlab": {
     "extension": true
   },
