--- a/packages/jupyterlab-fonts-extension/package.json
+++ b/packages/jupyterlab-fonts-extension/package.json
@@ -7,6 +7,7 @@
     "@deathbeds/jupyterlab-fonts": "^0.2.0",
     "@jupyterlab/application": "^0.16.0",
     "@jupyterlab/mainmenu": "^0.5.2",
+    "@jupyterlab/notebook": "^0.16.3",
     "@phosphor/commands": "^1.4.0"
   },
   "description": "Code Fonts for JupyterLab",
