--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -4,7 +4,7 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
   "description": "Code Fonts for JupyterLab",
-  "files": ["lib/*.{d.ts,js}", "{LICENSE,README.md}"],
+  "files": ["{lib,style}/*.{d.ts,js,css,svg}", "{LICENSE,README.md}"],
   "keywords": ["jupyter", "jupyterlab", "fonts"],
   "license": "BSD-3-Clause",
   "main": "lib/index.js",
@@ -16,6 +16,7 @@
   "types": "lib/index.d.ts",
   "version": "0.2.0",
   "dependencies": {
+    "@jupyterlab/notebook": "^0.16.3",
     "@phosphor/coreutils": "^1.3.0",
     "@phosphor/widgets": "^1.5.0",
     "@phosphor/commands": "^1.4.0",
