--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -25,9 +25,14 @@
   },
   "devDependencies": {
     "@types/jss": "^9.5.3",
-    "dtsgenerator": "^1.0.0"
+    "dtsgenerator": "^1.0.0",
+    "watch": "^1.0.2"
   },
   "scripts": {
-    "schema": "DEBUG=dtsgen dtsgen -o src/_schema.d.ts ./schema/fonts.json"
+    "build:schema":
+      "dtsgen schema/fonts.json | prettier --config=../../.prettierrc --stdin --stdin-filepath src/_schema.d.ts > src/_schema.d.ts",
+    "build": "jlpm build:schema && tsc",
+    "watch": "tsc -w",
+    "watch:schema": "watch 'jlpm build:schema' schema"
   }
 }
