--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
   },
   "scripts": {
     "clean": "lerna exec --parallel -- rimraf lib",
-    "lab:build": "cd $CONDA_PREFIX/share/jupyter/lab/staging && jlpm build",
     "bootstrap":
       "jlpm --no-optional --prefer-offline && jlpm clean && jlpm lint && jlpm lerna bootstrap && jlpm build && jlpm lab:link",
-    "build": "jlpm build:core && jlpm build:ext && jlpm build:fonts",
-    "build:ext": "lerna run build --scope '@deathbeds/jupyterlab-fonts-extension'",
+    "build": "jlpm build:core && jlpm build:fonts",
     "build:core": "lerna run build --scope '@deathbeds/jupyterlab-fonts'",
     "build:fonts": "lerna run build --scope '@deathbeds/jupyterlab-font-*'",
     "lab:link": "lerna exec -- jupyter labextension link . --no-build",
     "watch": "lerna run watch --parallel",
-    "lint": "jlpm lint:prettier && jlpm lint:tslint",
+    "lint": "jlpm lint:prettier && jlpm lint:tslint && jlpm lint:black && jlpm lint:flake8",
     "lint:tslint": "lerna exec -- tslint -c ../../tslint.json --fix ./src/**/*.ts",
+    "lint:beautysh": "beautysh -i 2 -f scripts/**/*.sh postBuild",
+    "lint:black": "black jyve setup.py",
+    "lint:flake8": "flake8 nbjss setup.py",
     "lab:watch":
       "cd $CONDA_PREFIX/share/jupyter/lab/staging && rm -rf ../static && jlpm watch",
     "lint:prettier":
