--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -5,7 +5,7 @@
   },
   "description": "Code Fonts for JupyterLab",
   "files": ["{lib,style,schema}/*.{d.ts,js,css,svg,json}", "{LICENSE,README.md}"],
-  "keywords": ["jupyter", "jupyterlab", "fonts"],
+  "keywords": ["jupyter", "jupyterlab", "fonts", "jupyterlab-extension"],
   "license": "BSD-3-Clause",
   "main": "lib/index.js",
   "name": "@deathbeds/jupyterlab-fonts",
@@ -16,12 +16,18 @@
   "types": "lib/index.d.ts",
   "version": "0.2.0",
   "dependencies": {
+    "@jupyterlab/application": "^0.16.0",
+    "@jupyterlab/mainmenu": "^0.5.2",
     "@jupyterlab/notebook": "^0.16.3",
+    "@phosphor/commands": "^1.4.0",
     "@phosphor/coreutils": "^1.3.0",
     "@phosphor/widgets": "^1.5.0",
-    "@phosphor/commands": "^1.4.0",
-    "jss": "^9.8.1",
-    "jss-preset-default": "^4.5.0"
+    "jss-preset-default": "^4.5.0",
+    "jss": "^9.8.1"
+  },
+  "jupyterlab": {
+    "extension": "lib/extension.js",
+    "schemaDir": "schema"
   },
   "devDependencies": {
     "@types/jss": "^9.5.3",
