--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -37,7 +37,8 @@
   "scripts": {
     "build:schema":
       "dtsgen schema/fonts.json | prettier --config=../../.prettierrc --stdin --stdin-filepath src/_schema.d.ts > src/_schema.d.ts",
-    "build": "jlpm build:schema && tsc",
+    "build": "jlpm build:schema && tsc && jlpm copy:schema",
+    "copy:schema": "cp src/_schema.d.ts lib/",
     "watch": "tsc -w",
     "watch:schema": "watch 'jlpm build:schema' schema"
   }
