--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -3,8 +3,10 @@
   "bugs": {
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
+  "peerDependencies": {
+    "@deathbeds/jupyterlab-fonts": "^0.3.0"
+  },
   "dependencies": {
-    "@deathbeds/jupyterlab-fonts": "^0.2.0",
     "firacode": "^1.205.0",
     "@jupyterlab/application": "^0.16.0"
   },
@@ -22,7 +24,7 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w"
