--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "dependencies": {
     "@jupyterlab/application": "^0.16.0",
     "@jupyterlab/mainmenu": "^0.5.2",
@@ -23,6 +23,7 @@
     "@phosphor/coreutils": "^1.3.0",
     "@phosphor/widgets": "^1.5.0",
     "jss-preset-default": "^4.5.0",
+    "js-base64": "^2.1.9",
     "jss": "^9.8.1"
   },
   "jupyterlab": {
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/jss": "^9.5.3",
+    "@types/js-base64": "^2.3.1",
     "dtsgenerator": "^1.0.0",
     "watch": "^1.0.2"
   },
