more work on tests

--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - jupyterlab >=0.32.1,<0.33
   - nodejs >=8.9.3,<9
   - python >=3.6,<3.7
+  - robotframework-lint
   - robotframework-seleniumlibrary
   - pip:
     - beautysh
