--- a/package.json
+++ b/package.json
@@ -9,38 +9,41 @@
   "devDependencies": {
     "@types/node": "~9.4.2",
     "lerna": "2.11.0",
+    "npm-run-all": "~4.1.3",
     "prettier": "1.13.7",
     "rimraf": "~2.6.1",
     "tslint": "~5.10.0",
     "typescript": "~2.8.3",
-    "webpack": "~2.7.0",
-    "npm-run-all": "~4.1.3"
+    "webpack": "~2.7.0"
   },
   "name": "@deathbed/fonts",
   "private": true,
   "scripts": {
     "bootstrap": "run-s bootstrap:py bootstrap:js bootstrap:lab",
-    "bootstrap:py": "python -m pip install -e . --no-deps --ignore-installed",
     "bootstrap:js": "jlpm && jlpm lerna bootstrap && jlpm build",
     "bootstrap:lab": "jlpm lab:link && jlpm lab:build",
-    "build": "run-s lint clean build:static build:schema build:core build:fonts",
+    "bootstrap:py": "python -m pip install -e . --no-deps --ignore-installed",
+    "build": "run-s lint clean:lib build:static build:schema build:core build:fonts",
     "build:core": "lerna run build --scope '@deathbeds/jupyterlab-fonts'",
     "build:fonts": "lerna run build --scope '@deathbeds/jupyterlab-font-*'",
     "build:schema": "lerna run build:schema --scope '@deathbeds/jupyterlab-fonts'",
     "build:static": "jlpm webpack -p",
-    "clean": "lerna exec --parallel -- rimraf lib",
+    "clean": "run-p clean:*",
+    "clean:lib": "lerna exec --parallel -- rimraf lib",
+    "clean:test": "rimraf _testoutput",
     "lab:build": "jupyter lab build --dev",
-    "lab:watch": "jupyter lab --no-browser --debug --watch",
     "lab:link": "lerna exec -- jupyter labextension link . --no-build",
+    "lab:watch": "jupyter lab --no-browser --debug --watch",
     "lint": "run-p lint:**",
-    "lint:sh": "beautysh -i 2 -f postBuild",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
+    "lint:robot": "rflint --configure TooManyTestSteps:20 --configure TooFewKeywordSteps:0  tests/**/*.robot",
+    "lint:sh": "beautysh -i 2 -f postBuild",
     "lint:ts": "prettier --write *.json *.md && lerna exec -- prettier --write --config=../../.prettierrc ./src/**/*.ts ./style/**/*.css ./*.json ./*.md && lerna exec -- tslint -c ../../tslint.json --fix ./src/**/*.ts",
     "test": "run-p test:**",
     "test:robot": "python -m robot -d _testoutput tests/acceptance",
     "watch": "run-p watch:** lab:watch",
-    "watch:ts": "lerna run watch --parallel",
-    "watch:schema": "jlpm lerna run watch:schema --parallel --scope '@deathbeds/jupyterlab-fonts'"
+    "watch:schema": "jlpm lerna run watch:schema --parallel --scope '@deathbeds/jupyterlab-fonts'",
+    "watch:ts": "lerna run watch --parallel"
   },
   "version": "0.1.0",
   "workspaces": [
