--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,9 @@ channels:
 
 dependencies:
   - black
+  - brotlipy
   - flake8
+  - fonttools
   - geckodriver
   - jupyterlab >=0.32.1,<0.33
   - nodejs >=8.9.3,<9
