--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -7,16 +7,14 @@
     "@deathbeds/jupyterlab-fonts": "^0.3.0"
   },
   "dependencies": {
+    "typeface-anonymous-pro": "^0.0.54",
     "@jupyterlab/application": "^0.16.0"
   },
-  "devDependencies": {
-    "dejavu-fonts-ttf": "2.37.3"
-  },
-  "description": "Dejavu Sans Mono Fonts for JupyterLab",
+  "description": "Anonymous Pro Fonts for JupyterLab",
   "files": [
-    "{lib,style}/**/*.{d.ts,js,css,woff2}",
+    "{lib,style}/*.{d.ts,js,css}",
     "{README.md,LICENSE}",
-    "vendor/dejavu-fonts-ttf/LICENSE"
+    "vendor/anonymous-pro/LICENSE"
   ],
   "jupyterlab": {
     "extension": true
@@ -28,7 +26,7 @@
   ],
   "license": "BSD-3-Clause",
   "main": "lib/index.js",
-  "name": "@deathbeds/jupyterlab-font-dejavu",
+  "name": "@deathbeds/jupyterlab-font-anonymous-pro",
   "repository": {
     "type": "git",
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
@@ -36,7 +34,7 @@
   "types": "lib/index.d.ts",
   "version": "0.3.0",
   "scripts": {
-    "build": "python scripts/convert.py && tsc",
+    "build": "tsc",
     "watch": "tsc -w"
   }
 }
