--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -10,7 +10,7 @@
     "firacode": "^1.205.0",
     "@jupyterlab/application": "^0.16.0"
   },
-  "description": "Code Fonts for JupyterLab",
+  "description": "Fira Code Fonts for JupyterLab",
   "files": [
     "{lib,style}/*.{d.ts,js,css}",
     "{README.md,LICENSE}"
