just use miniconda

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,14 @@ sudo: false
 dist: trusty
 addons:
   firefox: latest
+env:
+  - MINICONDA_VERSION=4.5.4 CONDA_DIR=$HOME/miniconda3
 before_install:
-  - git clone --depth 1 git://github.com/astropy/ci-helpers.git
-  - source ci-helpers/travis/setup_conda.sh
-  - conda env update -n base --file environment.yml
+  - wget --quiet https://repo.continuum.io/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh
+  - echo "a946ea1d0c4a642ddf0c3a26a18bb16d *Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh" | md5sum -c -
+  - bash Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh -f -b -p $CONDA_DIR
+  - $CONDA_DIR/bin/conda env update -n base --file environment.yml
 install:
-  - bash postBuild
+  - source $CONDA_DIR/bin/activate && bash postBuild
 script:
-  - source activate base && jlpm test
+  - source $CONDA_DIR/bin/activate && jlpm test
