--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "dependencies": {
-    "@jupyterlab/application": "^0.16.0",
-    "@jupyterlab/mainmenu": "^0.5.2",
-    "@phosphor/commands": "^1.4.0",
+    "@jupyterlab/application": "^0.17.0",
+    "@jupyterlab/mainmenu": "^0.6.2",
+    "@phosphor/commands": "^1.5.0",
     "@phosphor/coreutils": "^1.3.0",
-    "@phosphor/widgets": "^1.5.0"
+    "@phosphor/widgets": "^1.6.0"
   },
   "devDependencies": {
     "@types/node": "~9.4.2",
     "lerna": "2.11.0",
     "npm-run-all": "~4.1.3",
-    "prettier": "1.13.7",
+    "prettier": "1.14.0",
     "rimraf": "~2.6.1",
-    "tslint": "~5.10.0",
-    "typescript": "~2.8.3",
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.2",
     "webpack": "~2.7.0"
   },
   "name": "@deathbed/fonts",
