--- a/environment.yml
+++ b/environment.yml
@@ -11,10 +11,11 @@ dependencies:
   - flake8
   - fonttools
   - geckodriver
-  - jupyterlab >=0.32.1,<0.33
+  - jupyterlab >=0.33,<0.34
   - nodejs >=8.9.3,<9
   - python >=3.6,<3.7
   - robotframework-lint
   - robotframework-seleniumlibrary
+  - selenium =3.8.0
   - pip:
     - beautysh
