--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - jupyterlab >=0.33,<0.34
   - nodejs >=8.9.3,<9
   - python >=3.6,<3.7
+  - python-chromedriver-binary
   - robotframework-lint
   - robotframework-seleniumlibrary
   - selenium =3.8.0
