--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "rimraf": "~2.6.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2",
-    "webpack": "~2.7.0"
+    "webpack": "~4.12.0",
+    "webpack-cli": "^3.0.3",
+    "@types/webpack-env": "~1.13.6"
   },
   "name": "@deathbed/fonts",
   "private": true,
