--- a/packages/jupyterlab-fonts/tsconfig.json
+++ b/packages/jupyterlab-fonts/tsconfig.json
@@ -1,27 +1,8 @@
 {
+  "extends": "../../tsconfigbase",
   "compilerOptions": {
-    "declaration": true,
-    "jsx": "react",
-    "lib": [
-      "ES5",
-      "ES2015",
-      "ES2015.Promise",
-      "DOM",
-      "ES2015.Collection",
-      "ES2016",
-      "ES6"
-    ],
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noEmitOnError": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
     "outDir": "./lib",
-    "importHelpers": true,
-    "target": "ES5",
-    "types": [
-      "node"
-    ]
+    "jsx": "react"
   },
   "include": [
     "src/**/*",
