more attempts at ci fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - wget --quiet https://repo.continuum.io/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh
   - echo "a946ea1d0c4a642ddf0c3a26a18bb16d *Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh" | md5sum -c -
   - bash Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh -f -b -p $CONDA_DIR
+  - $CONDA_DIR/bin/conda install -n base -c defaults -c conda-forge conda sqlite3
   - $CONDA_DIR/bin/conda env update -n base --file environment.yml
 install:
   - source $CONDA_DIR/bin/activate && bash postBuild
