--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,8 @@
 name: jupyterlab-fonts-dev
 
 channels:
-  - conda-forge
   - defaults
+  - conda-forge
 
 dependencies:
   - black
@@ -11,10 +11,12 @@ dependencies:
   - flake8
   - fonttools
   - geckodriver
-  - jupyterlab >=0.32.1,<0.33
+  - jupyterlab >=0.33,<0.34
   - nodejs >=8.9.3,<9
   - python >=3.6,<3.7
+  - python-chromedriver-binary
   - robotframework-lint
   - robotframework-seleniumlibrary
+  - selenium =3.8.0
   - pip:
     - beautysh
