--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -4,11 +4,14 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
   "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "^0.3.0"
+    "@deathbeds/jupyterlab-fonts": "^0.4.0"
   },
   "dependencies": {
     "typeface-anonymous-pro": "^0.0.54",
-    "@jupyterlab/application": "^0.16.0"
+    "@jupyterlab/application": "^0.17.0"
+  },
+  "devDependencies": {
+    "@types/webpack-env": "~1.13.6"
   },
   "description": "Anonymous Pro Fonts for JupyterLab",
   "files": [
@@ -32,7 +35,7 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w"
