--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-envs/
+__pycache__
+_testoutput/
 .ipynb_checkpoints/
-node_modules/
+.projectignore
+*.egg-info/
 *.log
+*.woff2
+anaconda-project.yml
+envs/
+nbjss/static/nbjss.js
+node_modules/
 packages/*/lib
 Untitled*.ipynb
-*.egg-info/
-__pycache__
-nbjss/static/nbjss.js
-_testoutput/
-*.woff2
