--- a/environment.yml
+++ b/environment.yml
@@ -11,12 +11,11 @@ dependencies:
   - flake8
   - fonttools
   - geckodriver
-  - jupyterlab >=0.34,<0.35
+  - jupyterlab >=0.35,<0.36
   - nodejs >=8.9.3,<9
   - python >=3.6,<3.7
   - python-chromedriver-binary
   - robotframework-lint
   - robotframework-seleniumlibrary
-  - selenium =3.8.0
-  - pip:
-    - beautysh
+  - selenium
+  - beautysh
