--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,3 @@
-# This is used by repo2docker. conda can install all the Jupyter dependencies.
 name: jupyterlab-fonts-dev
 
 channels:
@@ -6,16 +5,16 @@ channels:
   - conda-forge
 
 dependencies:
+  - beautysh
   - black
   - brotlipy
+  - firefox
   - flake8
   - fonttools
   - geckodriver
-  - jupyterlab >=0.35,<0.36
-  - nodejs >=8.9.3,<9
-  - python >=3.6,<3.7
-  - python-chromedriver-binary
+  - jupyterlab >=1.2.1,<1.3
+  - nodejs
+  - python >=3.7,<3.8.0a0
   - robotframework-lint
   - robotframework-seleniumlibrary
-  - selenium
-  - beautysh
+  - wget
