--- a/packages/_meta/tsconfig.json
+++ b/packages/_meta/tsconfig.json
@@ -9,9 +9,17 @@
     "src/@types/**/*"
   ],
   "references": [
-
+    {
+     "path": "../jupyterlab-font-anonymous-pro"
+   },
      {
       "path": "../jupyterlab-fonts"
-    }
+    },
+      {
+       "path": "../jupyterlab-font-dejavu-sans-mono"
+     },
+       {
+        "path": "../jupyterlab-font-fira-code"
+      }
   ]
 }
