--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "dependencies": {
-    "@jupyterlab/application": "^0.19.1",
-    "@jupyterlab/mainmenu": "^0.8.1",
-    "@phosphor/commands": "^1.5.0",
-    "@phosphor/coreutils": "^1.3.0",
-    "@phosphor/widgets": "^1.6.0"
-  },
   "devDependencies": {
-    "@types/node": "~9.4.2",
-    "lerna": "2.11.0",
-    "npm-run-all": "~4.1.3",
-    "prettier": "1.14.0",
-    "rimraf": "~2.6.1",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
-    "webpack": "~4.12.0",
-    "webpack-cli": "^3.0.3",
-    "@types/webpack-env": "~1.13.6"
+    "rimraf": "~2.6.2",
+    "typescript": "~3.5.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "lerna": "^3.13.2",
+    "prettier": "^1.18.2",
+    "tslint": "^5.15.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.0.0"
   },
-  "name": "@deathbed/fonts",
   "private": true,
   "scripts": {
     "bootstrap": "jlpm && run-s bootstrap:py bootstrap:js bootstrap:lab",
@@ -47,7 +42,6 @@
     "watch:schema": "jlpm lerna run watch:schema --parallel --scope '@deathbeds/jupyterlab-fonts'",
     "watch:ts": "lerna run watch --parallel"
   },
-  "version": "0.1.0",
   "workspaces": [
     "packages/*"
   ]
