--- a/packages/jupyterlab-fonts/tsconfig.json
+++ b/packages/jupyterlab-fonts/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfigbase",
   "compilerOptions": {
-    "outDir": "./lib",
-    "jsx": "react"
+    "outDir": "lib",
+    "rootDir": "src"
   },
   "include": [
     "src/**/*",
