more work on scripts

--- a/package.json
+++ b/package.json
@@ -16,31 +16,30 @@
   },
   "private": true,
   "scripts": {
-    "bootstrap": "jlpm && run-s bootstrap:py bootstrap:js bootstrap:lab",
-    "bootstrap:js": "jlpm lerna bootstrap && jlpm build",
+    "bootstrap": "jlpm bootstrap:py && jlpm bootstrap:js && jlpm bootstrap:lab",
+    "bootstrap:js": "jlpm && jlpm lerna bootstrap && jlpm build",
     "bootstrap:lab": "jlpm lab:link && jlpm lab:build",
     "bootstrap:py": "python -m pip install -e . --no-deps --ignore-installed",
-    "build": "run-s lint:ts clean:lib build:static build:schema build:core build:fonts",
-    "build:core": "lerna run build --scope '@deathbeds/jupyterlab-fonts'",
-    "build:fonts": "lerna run build --scope '@deathbeds/jupyterlab-font-*'",
-    "build:schema": "lerna run build:schema --scope '@deathbeds/jupyterlab-fonts'",
+    "build": "jlpm lint:ts && jlpm clean:lib && jlpm build:schema && jlpm build:ts",
+    "build:ts": "cd packages && cd _meta && tsc -b",
+    "build:schema": "lerna run build:schema",
     "build:static": "jlpm webpack -p",
-    "clean": "run-p clean:*",
+    "clean": "jlpm clean:lib && jlpm clean:test",
     "clean:lib": "lerna exec --parallel -- rimraf lib",
     "clean:test": "rimraf _testoutput",
-    "lab:build": "jupyter lab build --dev",
-    "lab:link": "lerna exec -- jupyter labextension link . --no-build",
-    "lab:watch": "jupyter lab --no-browser --debug --watch",
-    "lint": "run-p lint:**",
+    "lab:build": "jupyter lab build",
+    "lab:link": "lerna exec -- jupyter labextension install . --no-build",
+    "lint": "jlpm lint:py && jlpm lint:prettier && jlpm lint:tslint && jlpm lint:sh && jlpm lint:robot",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
     "lint:robot": "python -m robot.tidy --inplace tests/{acceptance,resources}/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
     "lint:sh": "beautysh -i 2 -f postBuild",
-    "lint:ts": "prettier --write *.json *.md && lerna exec -- prettier --write --config=../../.prettierrc ./src/**/*.ts ./src/**/*.tsx ./style/**/*.css ./*.json ./*.md && lerna exec -- tslint -c ../../tslint.json --fix ./src/**/*.ts",
+    "lint:prettier": "prettier --write *.json *.md *.yml && prettier --write 'packages/**/*.{ts,tsx,css,json,md}'",
+    "lint:tslint": "tslint --fix -c tslint.json --project tsconfigbase.json 'packages/**/*{.ts,.tsx}'",
     "test": "run-p test:**",
     "test:robot": "python -m robot -d _testoutput tests/acceptance",
     "watch": "run-p watch:** lab:watch",
-    "watch:schema": "jlpm lerna run watch:schema --parallel --scope '@deathbeds/jupyterlab-fonts'",
-    "watch:ts": "lerna run watch --parallel"
+    "watch:schema": "jlpm lerna run watch:schema --parallel",
+    "watch:ts": "cd packages/_meta && tsc -b -w"
   },
   "workspaces": [
     "packages/*"
