use firefox esr

--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -14,7 +14,7 @@ env_specs:
       - beautysh
       - black
       - brotlipy
-      - firefox
+      - firefox =68
       - flake8
       - fonttools
       - geckodriver
