--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "private": true,
   "scripts": {
-    "bootstrap": "jlpm bootstrap:py && jlpm bootstrap:js && jlpm bootstrap:lab",
-    "bootstrap:js": "jlpm && jlpm lerna bootstrap && jlpm build",
+    "bootstrap": "jlpm && jlpm lint && jlpm bootstrap:py && jlpm bootstrap:js && jlpm bootstrap:lab",
+    "bootstrap:js": "jlpm lerna bootstrap && jlpm build",
     "bootstrap:lab": "jlpm lab:link && jlpm lab:build",
     "bootstrap:py": "python -m pip install -e . --no-deps --ignore-installed",
-    "build": "jlpm lint:ts && jlpm clean:lib && jlpm build:schema && jlpm build:ts",
+    "build": "jlpm build:schema && jlpm build:ts",
     "build:ts": "cd packages && cd _meta && tsc -b",
     "build:schema": "lerna run build:schema",
     "build:static": "jlpm webpack -p",
