--- a/packages/_meta/tsconfig.json
+++ b/packages/_meta/tsconfig.json
@@ -4,22 +4,19 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": [
-    "src/**/*",
-    "src/@types/**/*"
-  ],
+  "include": ["src/**/*", "src/@types/**/*"],
   "references": [
     {
-     "path": "../jupyterlab-font-anonymous-pro"
-   },
-     {
+      "path": "../jupyterlab-font-anonymous-pro"
+    },
+    {
       "path": "../jupyterlab-fonts"
     },
-      {
-       "path": "../jupyterlab-font-dejavu-sans-mono"
-     },
-       {
-        "path": "../jupyterlab-font-fira-code"
-      }
+    {
+      "path": "../jupyterlab-font-dejavu-sans-mono"
+    },
+    {
+      "path": "../jupyterlab-font-fira-code"
+    }
   ]
 }
