--- a/packages/jupyterlab-font-dejavu-sans-mono/tsconfig.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/tsconfig.json
@@ -4,13 +4,9 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": [
-    "src/**/*",
-    "src/@types/**/*"
-  ],
+  "include": ["src/**/*", "src/@types/**/*"],
   "references": [
-
-     {
+    {
       "path": "../jupyterlab-fonts"
     }
   ]
