--- a/packages/jupyterlab-fonts/tsconfig.json
+++ b/packages/jupyterlab-fonts/tsconfig.json
@@ -4,8 +4,5 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": [
-    "src/**/*",
-    "src/@types/**/*"
-  ]
+  "include": ["src/**/*", "src/@types/**/*"]
 }
