--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "clean:test": "rimraf _testoutput",
     "lab:build": "jupyter lab build",
     "lab:link": "lerna exec -- jupyter labextension install . --no-build",
-    "lint": "jlpm lint:py && jlpm lint:prettier && jlpm lint:tslint && jlpm lint:sh && jlpm lint:robot",
+    "lint": "jlpm lint:py && jlpm lint:ts && jlpm lint:sh && jlpm lint:robot",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
     "lint:robot": "python -m robot.tidy --inplace tests/{acceptance,resources}/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
     "lint:sh": "beautysh -i 2 -f postBuild",
+    "lint:ts": "jlpm lint:prettier && jlpm lint:tslint",
     "lint:prettier": "prettier --write *.json *.md *.yml && prettier --write 'packages/**/*.{ts,tsx,css,json,md}'",
     "lint:tslint": "tslint --fix -c tslint.json --project tsconfigbase.json 'packages/**/*{.ts,.tsx}'",
     "test": "run-p test:**",
