--- a/packages/jupyterlab-font-anonymous-pro/tsconfig.json
+++ b/packages/jupyterlab-font-anonymous-pro/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "tsBuildInfoFile": "lib/.tsbuildinfo"
   },
   "include": ["src/**/*", "src/@types/**/*"],
   "references": [
