--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clean:lib": "lerna exec --parallel -- rimraf lib",
     "clean:test": "rimraf _testoutput",
     "lab:build": "jupyter lab build",
-    "lab:link": "lerna exec -- jupyter labextension install . --no-build",
+    "lab:link": "lerna exec --scope '@deathbeds/jupyterlab-*' -- jupyter labextension install . --no-build",
     "lint": "jlpm lint:py && jlpm lint:ts && jlpm lint:sh && jlpm lint:robot",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
     "lint:robot": "python -m robot.tidy --inplace tests/{acceptance,resources}/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
