--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh
   - echo "1c945f2b3335c7b2b15130b1b2dc5cf4 *Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh" | md5sum -c -
   - bash Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh -f -b -p $CONDA_DIR
-  - $CONDA_DIR/bin/conda install -yn base -c defaults -c conda-forge conda sqlite
+  - $CONDA_DIR/bin/conda install -yn base -c conda-forge -c defaults conda sqlite
   - $CONDA_DIR/bin/conda env update -n base --file environment.yml
 install:
   - source $CONDA_DIR/bin/activate && bash postBuild
