actually need brotli

--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -13,6 +13,7 @@ env_specs:
     packages:
       - beautysh
       - black
+      - brotlipy
       - firefox =68
       - flake8
       - fonttools
