--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -5,13 +5,13 @@
   },
   "peerDependencies": {
     "@deathbeds/jupyterlab-fonts": "^0.7.0",
-    "@jupyterlab/application": "^1.2.0"
+    "@jupyterlab/application": "1"
   },
   "dependencies": {
     "typeface-anonymous-pro": "^0.0.54"
   },
   "devDependencies": {
-    "@jupyterlab/application": "^1.2.0"
+    "@jupyterlab/application": "1"
   },
   "description": "Anonymous Pro Fonts for JupyterLab",
   "files": [
