--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -24,12 +24,12 @@
   "types": "lib/index.d.ts",
   "version": "0.7.0",
   "dependencies": {
-    "@jupyterlab/application": "^1.2.0",
-    "@jupyterlab/mainmenu": "^1.2.0",
-    "@jupyterlab/notebook": "^1.2.1",
-    "@phosphor/commands": "^1.7.0",
-    "@phosphor/coreutils": "^1.3.1",
-    "@phosphor/widgets": "^1.9.0",
+    "@jupyterlab/application": "1",
+    "@jupyterlab/mainmenu": "1",
+    "@jupyterlab/notebook": "1",
+    "@phosphor/commands": "1",
+    "@phosphor/coreutils": "1",
+    "@phosphor/widgets": "1",
     "jss-preset-default": "^4.5.0",
     "jss": "^9.8.7"
   },
