--- a/package.json
+++ b/package.json
@@ -1,53 +1,46 @@
 {
-  "dependencies": {
-    "@jupyterlab/application": "^0.19.1",
-    "@jupyterlab/mainmenu": "^0.8.1",
-    "@phosphor/commands": "^1.5.0",
-    "@phosphor/coreutils": "^1.3.0",
-    "@phosphor/widgets": "^1.6.0"
-  },
   "devDependencies": {
-    "@types/node": "~9.4.2",
-    "lerna": "2.11.0",
-    "npm-run-all": "~4.1.3",
-    "prettier": "1.14.0",
-    "rimraf": "~2.6.1",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
-    "webpack": "~4.12.0",
-    "webpack-cli": "^3.0.3",
-    "@types/webpack-env": "~1.13.6"
+    "rimraf": "~2.6.2",
+    "typescript": "~3.5.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "lerna": "^3.13.2",
+    "prettier": "^1.18.2",
+    "tslint": "^5.15.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.0.0"
   },
-  "name": "@deathbed/fonts",
   "private": true,
   "scripts": {
-    "bootstrap": "jlpm && run-s bootstrap:py bootstrap:js bootstrap:lab",
+    "bootstrap": "jlpm || jlpm || jlpm && jlpm lint && jlpm bootstrap:py && jlpm bootstrap:js && jlpm bootstrap:lab",
     "bootstrap:js": "jlpm lerna bootstrap && jlpm build",
     "bootstrap:lab": "jlpm lab:link && jlpm lab:build",
     "bootstrap:py": "python -m pip install -e . --no-deps --ignore-installed",
-    "build": "run-s lint:ts clean:lib build:static build:schema build:core build:fonts",
-    "build:core": "lerna run build --scope '@deathbeds/jupyterlab-fonts'",
-    "build:fonts": "lerna run build --scope '@deathbeds/jupyterlab-font-*'",
-    "build:schema": "lerna run build:schema --scope '@deathbeds/jupyterlab-fonts'",
+    "build": "jlpm build:schema && lerna run prebuild && jlpm build:ts",
+    "build:ts": "cd packages && cd _meta && tsc -b",
+    "build:schema": "lerna run build:schema",
     "build:static": "jlpm webpack -p",
-    "clean": "run-p clean:*",
+    "clean": "jlpm clean:lib && jlpm clean:test",
     "clean:lib": "lerna exec --parallel -- rimraf lib",
     "clean:test": "rimraf _testoutput",
-    "lab:build": "jupyter lab build --dev",
-    "lab:link": "lerna exec -- jupyter labextension link . --no-build",
-    "lab:watch": "jupyter lab --no-browser --debug --watch",
-    "lint": "run-p lint:**",
+    "lab:build": "jupyter lab build",
+    "lab:link": "lerna exec --scope '@deathbeds/jupyterlab-*' -- jupyter labextension install . --no-build",
+    "lint": "jlpm lint:py && jlpm lint:ts && jlpm lint:sh",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
     "lint:robot": "python -m robot.tidy --inplace tests/{acceptance,resources}/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
-    "lint:sh": "beautysh -i 2 -f postBuild",
-    "lint:ts": "prettier --write *.json *.md && lerna exec -- prettier --write --config=../../.prettierrc ./src/**/*.ts ./src/**/*.tsx ./style/**/*.css ./*.json ./*.md && lerna exec -- tslint -c ../../tslint.json --fix ./src/**/*.ts",
-    "test": "run-p test:**",
+    "lint:sh": "beautysh -i 2 postBuild",
+    "lint:ts": "jlpm lint:prettier && jlpm lint:tslint",
+    "lint:prettier": "prettier --write *.json *.md *.yml && prettier --write 'packages/**/*.{ts,tsx,css,json,md}'",
+    "lint:tslint": "tslint --fix -c tslint.json --project tsconfigbase.json 'packages/**/*{.ts,.tsx}'",
+    "test": "jlpm test:robot",
     "test:robot": "python -m robot -d _testoutput tests/acceptance",
-    "watch": "run-p watch:** lab:watch",
-    "watch:schema": "jlpm lerna run watch:schema --parallel --scope '@deathbeds/jupyterlab-fonts'",
-    "watch:ts": "lerna run watch --parallel"
+    "watch:schema": "jlpm lerna run watch:schema --parallel",
+    "watch": "cd packages/_meta && tsc -b -w"
   },
-  "version": "0.1.0",
   "workspaces": [
     "packages/*"
   ]
