--- a/environment.yml
+++ b/environment.yml
@@ -1,21 +1,19 @@
-# This is used by repo2docker. conda can install all the Jupyter dependencies.
 name: jupyterlab-fonts-dev
 
 channels:
-  - defaults
   - conda-forge
+  - defaults
 
 dependencies:
+  - beautysh
   - black
   - brotlipy
+  - firefox =68
   - flake8
   - fonttools
   - geckodriver
-  - jupyterlab >=0.35,<0.36
-  - nodejs >=8.9.3,<9
-  - python >=3.6,<3.7
-  - python-chromedriver-binary
+  - jupyterlab >=1.2.2,<1.3
+  - nodejs
+  - python >=3.7,<3.8.0a0
   - robotframework-lint
   - robotframework-seleniumlibrary
-  - selenium
-  - beautysh
