--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -4,14 +4,12 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
   "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "^0.5.0"
-  },
-  "dependencies": {
-    "@jupyterlab/application": "^0.19.1"
+    "@deathbeds/jupyterlab-fonts": "^0.7.0",
+    "@jupyterlab/application": "1"
   },
   "devDependencies": {
     "dejavu-fonts-ttf": "2.37.3",
-    "@types/webpack-env": "~1.13.6"
+    "@jupyterlab/application": "1"
   },
   "description": "Dejavu Sans Mono Fonts for JupyterLab",
   "files": [
@@ -35,9 +33,8 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "scripts": {
-    "build": "python scripts/convert.py && tsc",
-    "watch": "tsc -w"
+    "prebuild": "python scripts/convert.py"
   }
 }
