--- a/packages/jupyterlab-font-dejavu-sans-mono/tsconfig.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "extends": "../../tsconfigbase",
   "compilerOptions": {
-    "outDir": "./lib"
+    "outDir": "lib",
+    "rootDir": "src",
+    "tsBuildInfoFile": "lib/.tsbuildinfo"
   },
-  "include": [
-    "src/**/*",
-    "src/@types/**/*"
+  "include": ["src/**/*"],
+  "references": [
+    {
+      "path": "../jupyterlab-fonts"
+    }
   ]
 }
