--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -4,14 +4,15 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
   "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "^0.5.0"
+    "@deathbeds/jupyterlab-fonts": "^0.7.0",
+    "@jupyterlab/application": "1"
   },
   "dependencies": {
-    "firacode": "^1.205.0",
-    "@jupyterlab/application": "^0.19.1"
+    "firacode": "^2.0.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "~1.13.6"
+    "@deathbeds/jupyterlab-fonts": "^0.7.0",
+    "@jupyterlab/application": "1"
   },
   "description": "Fira Code Fonts for JupyterLab",
   "files": [
@@ -34,9 +35,5 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "0.6.0",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w"
-  }
+  "version": "0.7.0"
 }
