--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -22,14 +22,14 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "dependencies": {
-    "@jupyterlab/application": "^0.19.1",
-    "@jupyterlab/mainmenu": "^0.8.1",
-    "@jupyterlab/notebook": "^0.19.2",
-    "@phosphor/commands": "^1.5.0",
-    "@phosphor/coreutils": "^1.3.0",
-    "@phosphor/widgets": "^1.6.0",
+    "@jupyterlab/application": "1",
+    "@jupyterlab/mainmenu": "1",
+    "@jupyterlab/notebook": "1",
+    "@phosphor/commands": "1",
+    "@phosphor/coreutils": "1",
+    "@phosphor/widgets": "1",
     "jss-preset-default": "^4.5.0",
     "jss": "^9.8.7"
   },
@@ -44,8 +44,8 @@
   },
   "scripts": {
     "build:schema": "dtsgen schema/fonts.json | prettier --config=../../.prettierrc --stdin --stdin-filepath src/_schema.d.ts > src/_schema.d.ts",
-    "build": "jlpm build:schema && tsc && jlpm copy:schema",
-    "copy:schema": "cp src/_schema.d.ts lib/",
+    "prebuild": "jlpm build:schema && jlpm copy:schema",
+    "copy:schema": "mkdir -p lib && cp src/_schema.d.ts lib/",
     "watch": "tsc -w",
     "watch:schema": "watch 'jlpm build:schema' schema"
   }
