--- a/packages/jupyterlab-fonts/tsconfig.json
+++ b/packages/jupyterlab-fonts/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "extends": "../../tsconfigbase",
   "compilerOptions": {
-    "outDir": "./lib",
-    "jsx": "react"
+    "outDir": "lib",
+    "rootDir": "src",
+    "tsBuildInfoFile": "lib/.tsbuildinfo"
   },
-  "include": [
-    "src/**/*",
-    "src/@types/**/*"
-  ]
+  "include": ["src/**/*", "src/@types/**/*"]
 }
